[B]2.4.0[/B]
- added: aspect tag to imdb poster

[B]2.3.0[/B]
- added: option to scrape rating from MetaCritic (via IMDb)

[B]2.2.3[/B]
- fixed: still to address some html encode issues, now in plots

[B]2.2.2[/B]
- fixed: still to address html encode issues

[B]2.2.1[/B]
- fixed: hopefully fixed issue with html encodes

[B]2.2.0[/B]
- factored out GetIMDBAKATitlesById
- factored out scraping certifications

[B]2.1.9[/B]
- fixed: plot when contains html links (once again)

[B]2.1.8[/B]
- revert: two latest changes - cause crash some times

[B]2.1.7[/B]
- fixed: typo in fixing previous plot issue

[B]2.1.6[/B]
- fixed: plot when contains html links

[B]2.1.5[/B]
- fixed: Cleanup and factored out Genres to common

[B]2.1.4[/B]
- fixed: fetching directors and writers due to site changes

[B]2.1.3[/B]
- fixed: make sure IMDb rating is geting fetched in every region

[B]2.1.2[/B]
- fixed: IMDb rating after another site change

[B]2.1.1[/B]
- fixed: IMDb rating

[B]2.1.0[/B]
- fixed: actor roles and remove scraping of imdb trailers

[B]2.0.8[/B]
- fixed: actor images

[B]2.0.7[/B]
- changed: fix actors due to IMDb changes

[B]2.0.6[/B]
- changed: re-added fixchars

[B]2.0.5[/B]
- changed: move scraping of IMDb rating out to IMDb scraper library

[B]2.0.4[/B]
- reverted: purge fixchars from all functions, since it cause convert fails on Beta2 and Linux

[B]2.0.3[/B]
- reverted: fixchars removed from cast parsing, leads to Dharma Beta2 hanging, will be added back once next Beta is out

[B]2.0.2[/B]
- fixed: some more cast won't get scraped under certain circumtances

[B]2.0.1[/B]
- fixed: cast won't get scraped under certain circumtances

[B]2.0.0[/B]
- changed: adapted new IMDb layout

[B]1.0.5[/B]
- fixed: tack /combined onto the end of the url to work around the new layout of IMDb